# neotest-golang

./: .busted  .gitignore  .golangci.yml  .luarc.json  .neoconf.json  .pkgx.yml  .prettierignore  .tsqueryrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  PLENARY.md  README.md  TASK.md  TODO.md  Taskfile.lua.yml  Taskfile.python.yml  Taskfile.yml  bld  build.zig  debug_streaming.lua  lazy.lua  mkdocs.yml  neotest-golang-scm-1.rockspec  pok  pyproject.toml  stylua.toml  test_gotestsum_streaming.lua  test_in_neovim.lua  test_stream_debug.lua  test_tlog_functionality.lua  zensical.toml
.bld/: config.go  go.mod  go.sum  main.go
.github/: dependabot.yml
.github/DISCUSSION_TEMPLATE/: configuration.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: bld-go.yml  bld-markdown.yml  cc.yml  (+38 more)
.pocket/: config.go  go.mod  go.sum  main.go  plenary.go  zensical.go
.sage/: go.mod  go.sum  plenary.go  query.go  sagefile.go  targets.gen.go  zensical.go
.tools/: Cargo.toml  go.mod  go.sum
HISTORY/: FLAT_STRUCTURE.md  GAP.md  METHOD_OWNERSHIP_MAP.md  NEAREST.md
docs/: config.md  contrib.md  index.md  install.md  recipes.md  test.md  trouble.md
spec/: basic_spec.lua  bootstrap.lua  busted.lua  busted_bootstrap.lua  busted_helper.lua  integration_lookup_spec.lua  json_spec.lua  minimal_init.lua  notest_spec.lua  plenary_bootstrap.lua  plenary_minimal_init.lua  run_tests.sh
test/: busted  install.sh  minimal_init.lua
tests/: bootstrap.lua  busted.lua  install.sh  minimal_init.lua  run_tests.sh
tools/: go.mod  go.sum
(+377 files in other folders)
