# SAFE TO CUSTOMIZE - This file is copied once and not overwritten during sync
# Source: https://github.com/fredrikaverpil/github

[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
stylua = "2.0.2"

# ts_query_ls must be installed from GitHub
# cargo install --git https://github.com/ribru17/ts_query_ls ts_query_ls
